--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: #333;
     text-align: left;
     font-family: Arial;
@@ -7,13 +8,19 @@ body{
     padding: 0;
 }
 #cabecera{
-    background: #33a;
+    background: #37488b;
     box-shadow: 0px 2px 50px 0px rgba(0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
 }
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline{
     margin: 0 0 0 1em;
     font-weight: normal;
@@ -30,5 +37,6 @@ body{
     font-size: 20px;
 }
 #post{
+    background: white;
     padding: 1em;
 }
